--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 before_install:
   - "export DISPLAY=:99.0"
 install:
-  - pip install -r docs/requirements.txt
+  - pip install --only-binary=numpy,scipy -r docs/requirements.txt
   - pip install nose coverage
   - pip install coveralls
 script:
