--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ python:
   - "2.6"
 before_install:
   - "export DISPLAY=:99.0"
+  - "sudo apt-get install -qq python-numpy python-scipy"
 install:
-  - pip install --only-binary=numpy,scipy -r docs/requirements.txt
+  - pip install -r docs/requirements.txt
   - pip install nose coverage
   - pip install coveralls
 script:
