--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: python
 python:
   - "2.7"
-  - "2.6"
 before_install:
   - "export DISPLAY=:99.0"
-  - "sudo apt-get install -qq python-numpy python-scipy"
+  - "sudo apt-get install -qq python-numpy python-scipy biopython"
 install:
-  - pip install -r docs/requirements.txt
   - pip install nose coverage
   - pip install coveralls
 script:
