--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python:
   - "2.7"
+  - "3.5"
 
 install:
   - sudo apt-get update
@@ -20,7 +21,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose dateutil pandas statsmodels biopython
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION biopython atlas numpy scipy matplotlib nose dateutil pandas statsmodels
   - source activate test-environment
   - pip install coveralls
   - python setup.py install
