--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 # The requirements needed by ConKit
 #       
 # You can install all dependencies in one go:
-#     pip install -r doc-requirements.txt
+#     pip install -r requirements.txt
 #
+biopython>=1.64
+matplotlib>=1.3.1
+numpy>=1.8.2
+scipy>=0.16.0
+
+# Required for documentation
 sphinx>1.0
 ipython
 numpydoc
