--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION biopython atlas numpy scipy matplotlib nose dateutil pandas statsmodels
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION biopython atlas numpy scipy matplotlib nose python-dateutil pandas statsmodels
   - source activate test-environment
   - pip install coveralls
   - python setup.py install
