unmatched contacts in black in contact map plot

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -157,7 +157,7 @@ pseudoxml:
 	@echo "Build finished. The pseudo-XML files are in $(BUILDDIR)/pseudoxml."
 
 figures:
-	mkdir _tmp
+	if [[ -d _tmp ]]; then rm -rf _tmp; else mkdir _tmp; fi
 	git clone https://github.com/rigdenlab/conkit-examples.git _tmp/conkit-examples 
 	conkit-plot chord -o examples/images/toxd_chord_simple.png _tmp/conkit-examples/toxd/toxd.fasta fasta _tmp/conkit-examples/toxd/toxd.mat ccmpred
 	conkit-plot cmap -o examples/images/toxd_cmap_simple.png _tmp/conkit-examples/toxd/toxd.fasta fasta _tmp/conkit-examples/toxd/toxd.mat ccmpred
