--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@
 # command:
 #       pip install -r requirements.txt
 
+setuptools
 numpy >=1.8.2
 biopython >=1.64
 matplotlib >=1.3.1
-scipy >=0.16.0
+# scipy >=0.16.0
 # scikit-learn >=0.18
 
