--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ setuptools
 numpy >=1.8.2
 biopython >=1.64
 matplotlib >=1.3.1
-# scipy >=0.16.0
-# scikit-learn >=0.18
+scipy >=0.16.0
+scikit-learn >=0.17.1
 
