--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION biopython atlas numpy scipy matplotlib nose python-dateutil pandas statsmodels
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION python-dateutil nose atlas numpy scipy scikit-learn pandas matplotlib statsmodel biopython
   - source activate test-environment
   - pip install coveralls
   - python setup.py install
