--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,10 @@ install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
-  # Useful for debugging any issues with conda
   - conda info -a
 
-  # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION python-dateutil nose numpy scipy scikit-learn pandas matplotlib statsmodels biopython
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+  - pip install -r requirements.txt
   - source activate test-environment
   - pip install coveralls
   - python setup.py install
