--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ install:
   - conda update -q conda
   - conda info -a
 
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+# Take these dependencies since their installation order can cause problems at times :/
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy scikit-learn matplotlib
   - pip install -r requirements.txt
   - source activate test-environment
   - pip install coveralls
