--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ install:
   - conda info -a
 
 # Take these dependencies since their installation order can cause problems at times :/
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy scikit-learn matplotlib
-  - pip install -r requirements.txt
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
+  - pip install -r requirements.txt
   - pip install coveralls
   - python setup.py install
 
