--- a/docs/Makefile
+++ b/docs/Makefile
@@ -33,6 +33,7 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+	rm -rf api/generated/*
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
