bit cleverer for image generation

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -32,8 +32,8 @@ help:
 	@echo "  apidoc     to create the apidoc pages"
 
 clean:
-	rm -rf $(BUILDDIR)/*
-	rm -rf api/generated/*
+	rm -rf $(BUILDDIR)/* api/generated/* examples/images/*
+
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
@@ -57,6 +57,7 @@ doctest:
 
 figures:
 	if [ -d _tmp ]; then rm -rf _tmp; else mkdir _tmp; fi
+	if [ -d examples/images ]; then rm -rf examples/images; else mkdir examples/images; fi
 	git clone https://github.com/rigdenlab/conkit-examples.git _tmp/conkit-examples
 	conkit-plot chord --confidence --overwrite -o examples/images/toxd_chord_simple.png _tmp/conkit-examples/toxd/toxd.fasta fasta _tmp/conkit-examples/toxd/toxd.mat ccmpred
 	conkit-plot cmap --overwrite -o examples/images/toxd_cmap_simple.png _tmp/conkit-examples/toxd/toxd.fasta fasta _tmp/conkit-examples/toxd/toxd.mat ccmpred
