removed build.cmd from appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,4 +10,4 @@ environment:
 build: off
 
 test_script:
-  - "build.cmd %PYTHON%\\python.exe setup.py test"
+  - "%PYTHON%\\python.exe setup.py test"
