--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       language: generic
       only: master 
 
-before_install:
+before_install: |
   if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
     ci/silence brew update
     brew install wget
