--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,19 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update;
       brew install wget;
+      MINICONDA_LCN_2="https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh";
+      MINICONDA_LCN_3="https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh";
     else
       sudo apt-get update;
+      MINICONDA_LCN_2="https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh";
+      MINICONDA_LCN_3="https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh";
     fi
 
 install:
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+      wget $MINICONDA_LCN_2 -O miniconda.sh;
     else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+      wget $MINICONDA_LCN_3 -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
