--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [aliases]
 test = pytest
 [tool:pytest]
-addopts = -vv --pep8 --cov=conkit
-norecursedirs = docs setup.py
+addopts = -vv --pep8 --cov=conkit --pyargs conkit
 pep8maxlinelength = 120
 pep8ignore = E402 E501
