--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ install:
 
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
+  - python setup.py install
 
 script:
   - python setup.py test
