--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@ test = pytest
 addopts = -vv --pep8 --cov=conkit --pyargs conkit
 pep8maxlinelength = 120
 pep8ignore = E402 E501
+[yapf]
+based_on_style = pep8
+spaces_before_comment = 4
+split_before_logical_operator = true
+column_limit = 120
