--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ test = pytest
 [tool:pytest]
 addopts = -vv --pep8 --cov=conkit --pyargs conkit
 pep8maxlinelength = 120
-pep8ignore = E402 E501
+pep8ignore = E203 E402 E501 W503
 [yapf]
 based_on_style = pep8
 spaces_before_comment = 4
