--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ cython >=0.28.2
 matplotlib >=1.3.1,<3.0
 numpy >=1.8.2
 biopython >=1.64
-scikit-learn >=0.17
+scikit-learn >=0.17,<0.21
 enum34 >=1.1.6;python_version<"3.4"
