--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,6 +10,8 @@ environment:
       CONDA_INSTALL_LOCN: "C:\\Miniconda35-x64"
     - PYTHON_VERSION: "3.6"
       CONDA_INSTALL_LOCN: "C:\\Miniconda36-x64"
+    - PYTHON_VERSION: "3.7"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda37-x64"
 
 platform:
   - x64
