--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest]
         python-version: [2.7, 3.5, 3.6, 3.7]
     steps:
     - uses: actions/checkout@master
@@ -36,6 +36,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python setup.py install
+        python -m pip install codecov coverage pytest pytest-cov pytest-pep8 pytest-helpers-namespace
     - name: Generate coverage report
       run: |
         python -m pytest --cov=./ --cov-report=xml
