--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py install
-        python -m pip install codecov coverage pytest pytest-cov pytest-pep8 pytest-helpers-namespace
     - name: Generate coverage report
       run: |
-        python -m pytest --cov=./ --cov-report=xml
+        python setup.py test
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1.0.2
       with:
