--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [aliases]
 test = pytest
 [tool:pytest]
-addopts = -vv --pep8 --cov=conkit --pyargs conkit
+addopts = -vv --pep8 --cov=conkit --cov-report=xml --pyargs conkit
 pep8maxlinelength = 120
 pep8ignore = E203 E402 E501 W503
 [yapf]
