--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest]
         python-version: [2.7, 3.5, 3.6, 3.7]
     steps:
     - uses: actions/checkout@master
@@ -18,7 +18,6 @@ jobs:
         version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        conda info
         python -m pip install --upgrade pip
         python -m pip install -U setuptools
         python setup.py install
