--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
-        python-version: [2.7, 3.5, 3.6, 3.7]
+        os: [ubuntu-latest]
+        python-version: [3.5, 3.6, 3.7, 3.8]
     steps:
     - uses: actions/checkout@master
     - name: Setup Python ${{ matrix.python-version }}
@@ -31,7 +31,7 @@ jobs:
     - name: Setup Python  
       uses: actions/setup-python@master
       with:
-        version: 3.7
+        version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
