--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-scipy >= 0.13.3
-cython >=0.28.2
-matplotlib >=1.3.1,<3.0
-numpy >=1.8.2
-biopython >=1.64
-scikit-learn >=0.17,<0.21
-enum34 >=1.1.6;python_version<"3.4"
+scipy
+cython
+matplotlib
+numpy
+biopython
+scikit-learn
