--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,14 +4,14 @@ environment:
     PYTHONIOENCODING: UTF-8
 
   matrix:
-    - PYTHON_VERSION: "2.7"
-      CONDA_INSTALL_LOCN: "C:\\Miniconda-x64"
     - PYTHON_VERSION: "3.5"
       CONDA_INSTALL_LOCN: "C:\\Miniconda35-x64"
     - PYTHON_VERSION: "3.6"
       CONDA_INSTALL_LOCN: "C:\\Miniconda36-x64"
     - PYTHON_VERSION: "3.7"
       CONDA_INSTALL_LOCN: "C:\\Miniconda37-x64"
+    - PYTHON_VERSION: "3.8"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda38-x64"
 
 platform:
   - x64
