--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,24 +10,27 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: [3.6, 3.7, 3.8]
+
     steps:
-    - uses: actions/checkout@master
-    - name: Testing with Python ${{ matrix.python-version }}
-      uses: actions/setup-python@master
+    - uses: actions/checkout@v1
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
       with:
-        version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.python-version }}
+	architecture: x64
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -U setuptools
-        python setup.py install
+    - name: Test with pytest
+      run: |
         python setup.py test
   
   codecov:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v1
     - name: Setup Python  
-      uses: actions/setup-python@master
+      uses: actions/setup-python@v1
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
