--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,18 @@ jobs:
         file: ./coverage.xml
         flags: unittests
         name: codecov-umbrella 
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Setup Python  
+      uses: actions/setup-python@v1
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python setup.py install
+    - name: Generate Sphinx docs
+      uses: ammaraskar/sphinx-action@master
+      with:
+        docs-folder: 'docs/'
