--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python setup.py install
+        python -m pip install -r docs/doc-requirements.txt
     - name: Generate Sphinx docs
       uses: ammaraskar/sphinx-action@master
       with:
