--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,14 +51,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Setup Python  
-      uses: actions/setup-python@v1
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python setup.py install
-        python -m pip install -r docs/doc-requirements.txt
     - name: Generate Sphinx docs
       uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: 'docs/'
+        pre-build-command: 'python -m pip install --upgrade pip && python setup install && python -m pip install -r docs/doc-requirements.txt'
