--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,6 @@ jobs:
       uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: 'docs/'
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
         pre-build-command: 'python -m pip install --upgrade pip && python setup install && python -m pip install -r docs/doc-requirements.txt'
+        pre-build-command: 'make html'
