--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.6, 3.7]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v1
@@ -18,10 +18,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         architecture: 'x64'
-    - name: Run tests
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python setup.py install 
+    - name: Run Tests
+      run: |
         python setup.py test
   
   codecov:
@@ -30,10 +32,12 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup Python  
       uses: actions/setup-python@v1
-    - name: Run tests
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py install
+        python setup.py install 
+    - name: Run Tests
+      run: |
         python setup.py test
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1.0.2
