--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install cython numpy
         python setup.py install 
     - name: Run Tests
       run: |
@@ -35,6 +36,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install cython numpy
         python setup.py install 
     - name: Run Tests
       run: |
