--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install cython numpy
-        python setup.py install 
+        python -m pip install .
     - name: Run Tests
       run: |
         python setup.py test
@@ -36,8 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install cython numpy
-        python setup.py install 
+        python -m pip install .
     - name: Run Tests
       run: |
         python setup.py test
