--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
         python -m pip install .
     - name: Run Tests
       run: |
+        python -m pip install --upgrade pip
+        python -m pip install .
         python setup.py test
   
   codecov:
@@ -38,6 +40,8 @@ jobs:
         python -m pip install .
     - name: Run Tests
       run: |
+        python -m pip install --upgrade pip
+        python -m pip install .
         python setup.py test
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1.0.2
