--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,9 +4,12 @@ sphinx:
   configuration: docs/conf.py
 
 python:
-  version: 3.7
-  install:
-    - requirements: docs/requirements.txt
-    - requirements: requirements.txt
-    - method: pip
-      path: .
+   version: 3.7
+   install:
+      - method: pip
+        path: .
+        extra_requirements:
+           - docs
+      - method: setuptools
+        path: package
+    system_packages: true
