--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,9 +6,9 @@ sphinx:
 python:
    version: 3.7
    install:
+      - requirements: requirements.txt
+      - requirements: docs/requirements.txt
       - method: pip
         path: .
-        extra_requirements:
-           - docs
       - method: setuptools
         path: .
