--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py install 
-    - name: Run tests
+        python -m pip install .
+    - name: Run Tests
       run: |
+        python -m pip install --upgrade pip
+        python -m pip install .
         python setup.py test
   
   codecov:
@@ -35,9 +37,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py install
-    - name: Generate coverage report
+        python -m pip install .
+    - name: Run Tests
       run: |
+        python -m pip install --upgrade pip
+        python -m pip install .
         python setup.py test
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1.0.2
