--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup Python  
       uses: actions/setup-python@v1
+      with:
+        python-version: '3.8'
+        architecture: 'x64'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
